fix(statistic): definition link on Safari
Every other browser shows text-decoration: underline; when line-height is 1,
but Safari doesn't seem to do that. This reverts the line-height to the default,
which shows the text-decoration for Safari.

--- a/src/components/common/statistic.module.scss
+++ b/src/components/common/statistic.module.scss
@@ -47,7 +47,6 @@
   @include type-size(50);
   display: inline-block;
   @include margin(8, (right, bottom));
-  line-height: 1;
   cursor: pointer;
   border: none;
   background: inherit;
